# DeviceMFT

./: .gitignore  Blender.lib  BlenderWrapper.h  Insta360DeviceMFT.inf  README.md  SampleDeviceMft.sln  basepin.cpp  log.cpp  log.h  multipinmft.cpp  multipinmft.h  multipinmft.vcxproj  multipinmft.vcxproj.Filters  stdafx.h  uvcApi.cpp  uvcApi.h
DMFT/: common.h  multipinmft.cpp
Decoder/: RawFrameSrc.cpp  RawFrameSrc.hpp
include/: BlenderWrapper.h  uvcxuApi.h
include/arvmedia/: .gitignore  CMakeLists.txt  README.md
include/arvmedia/modules/: FindFFMPEG.cmake
include/arvmedia/render/: main.cpp  sdl_slider_bar.h  sdl_text_button.h
include/arvmedia/src/av_toolbox/: any.h  bsf_filter.cpp  bsf_filter.h  codec_util.cpp  codec_util.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  dynamic_bitset.cpp  dynamic_bitset.h  dynamic_circular_buffer.h  encoder.cpp  ffmpeg_util.cpp  ffmpeg_util.h  filter_util.cpp  filter_util.h  frame_util.cpp  frame_util.h  muxer.cpp  muxer.h  packet_util.cpp  packet_util.h  platform.h  stream_util.cpp  stream_util.h  swr_resampler.cpp  swr_resampler.h  swr_util.cpp  swr_util.h  threadsafe_queue.h  video_parser.h
include/arvmedia/src/editor/: editor.h  editor_error.h  file_media_src.cpp  file_media_src.h  media_pipe.cpp  media_pipe.h  media_src.h  merge_media_src.cpp  merge_media_src.h  realtime_media_src.h
include/arvmedia/src/editor/filter/: circular_buffer_filter.h  decode_filter.cpp  decode_filter.h  encode_filter.cpp  encode_filter.h  media_filter.h  mux_sink.cpp  mux_sink.h  null_sink.h  queue_filter.h  scale_filter.h  statistic_filter.h  swr_resample_filter.cpp  swr_resample_filter.h
include/arvmedia/src/eventloop/: event.cpp  event.h  event_dispatcher.cpp  event_dispatcher.h  event_handler.h
include/arvmedia/src/llog/: llog.h  llog_message.cpp
include/arvmedia/src/player/: audio_decode_handler.cpp  audio_decode_handler.h  circular_packet_buffer.cpp  circular_packet_buffer.h  list_packet_buffer.cpp  list_packet_buffer.h  media_clock.h  media_type.h  packet_buffer.h  packet_source.cpp  packet_source.h  player.cpp  player.h  player_error.h  renderer.cpp  renderer.h  system_clock.h  url_parser.cpp  url_parser.h  video_decode_handler.cpp  video_decode_handler.h
include/arvmedia/src/player/audio_transform/: audio_resample_transform.cpp  audio_resample_transform.h  audio_transform.h
include/arvmedia/src/player/audioplay/: audio_player.cpp  audio_player.h  audio_queue_player.cpp  audio_queue_player.h  openal_audio_player.cpp  openal_audio_player.h
include/arvmedia/test/: any_test.cpp  decode_test.cpp  demux_test.cpp  dynamic_bitset_test.cpp  dynamic_circular_buffer_test.cpp  editor_test.cpp  encode_test.cpp  event_test.cpp  merge_src_test.cpp  realtime_src_test.cpp  scale_test.cpp  swresample.cpp  transcode.cpp  video_parser_test.cpp
lib/: UvcXuApi.lib
